# OpenAutoGrowth

./: .gitignore  ARCHITECTURE_DESIGN.md  README.md  docker-compose.yml  index.html  main.js  package-lock.json  package.json  style.css  test_agents_logic.py  test_analyze_logic.py  test_e2e_closed_loop.py  test_logic_pure.py  vite.config.js
backend/: .env.example  Dockerfile  alembic.ini  init_db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py
backend/app/agents/: analysis.py  channel_exec.py  content_gen.py  graph.py  multimodal.py  optimizer.py  planner.py  reviewer.py  state.py  strategy.py
backend/app/api/: agents.py  articles.py  campaigns.py  router.py  ws.py
backend/app/core/: event_bus.py  llm.py  memory.py  rule_engine.py
backend/app/models/: __init__.py  analytics.py  campaign.py  content.py  optimization.py  user.py
backend/app/protocols/a2a/: models.py
backend/app/protocols/a2a/cards/: analysis.json  channel_exec.json  content_gen.json  multimodal.json  optimizer.json  planner.json  strategy.json
backend/app/protocols/mcp/: tools.py
backend/app/schemas/: a2a.py  agent.py  campaign.py
backend/app/tasks/: agent_tasks.py
backend/openautogrowth_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/: schema.sql
docs/: README.md
docs/architecture/: 00-overview.md  01-agent-design.md  02-system-flow.md  03-state-machine.md  04-agent-collaboration.md  05-rule-engine.md  06-model-toolchain.md  07-data-flow-service-boundary.md  08-entity-state-flow.md  09-backend-stack.md  10-api-spec.md  (+3 more)
(+38 files in other folders)
