[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openautogrowth-backend"
version = "1.0.0"
description = "OpenAutoGrowth — AI Multi-Agent Growth Engine Backend"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",

    # Data validation
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2.0",

    # Agent framework
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "anthropic>=0.40,<0.50",

    # Protocol
    "httpx>=0.28,<0.29",
    "mcp>=1.0,<2.0",

    # Infrastructure
    "redis[hiredis]>=5.2,<6.0",
    "arq>=0.26,<0.27",

    # Utilities
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.4,<25.0",
    "tenacity>=9.0,<10.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.28",          # TestClient
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
